Overflow bug fix

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: #272727;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 model-viewer {
